--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -1,15 +1,15 @@
 job_environments:
-    common_environment: &common_environment
-      APP_HOSTPATH: test-janus
-      CONTAINER_PREFIX: planet4-test-janus
-      WP_DB_NAME_PREFIX: planet4-test-janus_wordpress
-    develop_environment: &develop_environment
-      APP_ENVIRONMENT: development
-      APP_HOSTNAME: www-dev.greenpeace.org
-      CLOUDSQL_INSTANCE: p4-develop-k8s
-      GOOGLE_PROJECT_ID: planet-4-151612
-      GCLOUD_CLUSTER: p4-development
-      HELM_NAMESPACE: develop
-      HELM_RELEASE: planet4-test-janus
-      WP_DB_NAME: planet4-test-janus_wordpress_develop
-      WP_STATELESS_BUCKET: planet4-test-janus-stateless-develop
+  common_environment: &common_environment
+    APP_HOSTPATH: test-janus
+    CONTAINER_PREFIX: planet4-test-janus
+    WP_DB_NAME_PREFIX: planet4-test-janus_wordpress
+  develop_environment: &develop_environment
+    APP_ENVIRONMENT: development
+    APP_HOSTNAME: www-dev.greenpeace.org
+    CLOUDSQL_INSTANCE: p4-develop-k8s
+    GOOGLE_PROJECT_ID: planet-4-151612
+    GCLOUD_CLUSTER: p4-development
+    HELM_NAMESPACE: test-janus
+    HELM_RELEASE: planet4-test-janus
+    WP_DB_NAME: planet4-test-janus_wordpress_develop
+    WP_STATELESS_BUCKET: planet4-test-janus-stateless-develop
