--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ job_environments:
     HELM_RELEASE: planet4-test-janus
     WP_DB_NAME: planet4-test-janus_wordpress_develop
     WP_STATELESS_BUCKET: planet4-test-janus-stateless-develop
+    MIN_REPLICA_COUNT: 2
 
 
 commands:
